--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -5,14 +5,45 @@
     --second-color: #757575;
     --accent-color: #2196F3;
 }
+
+h1,h2,h3,h4,h5,h6,p{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+ul,ol{
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-left: 0px;
+}
+
+img{
+    display: block;
+}
+
 .list{
     list-style: none;
+    padding: 0px;
+    margin: 0px;
 }
 .link{
     text-decoration: none;
 }
 
+/* ============================== BODY ==============================*/
+body{
+    width: 1200px;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+/* ============================== END BODY ==============================*/
+
 /* ============================== HEADER ==============================*/
+.inheader{
+    display: flex;
+    align-items: center;
+}
 .logo-link{
     font-family: var(--second-font);
     font-weight: 700;
@@ -26,21 +57,46 @@
     color: var(--accent-color);
 }
 
+.menu{
+    display: flex;
+    margin-left: 93px;
+}
+
 .menu-link{
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.02em;    
     color: var(--main-color);
+}
+
+.menu-item:not(:last-child){
+    margin-right: 50px;
 }
 
 .menu-link:hover,
 .menu-link:focus{
     color: var(--accent-color);
+
 }
 
-.mail-link{
+.contacts{
+    display: flex;
+    margin-left: auto;
+}
+
+.contacts-item + .contacts-item{
+    margin-left: 50px;
+}
+.contacts-link{
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 14px;
@@ -49,22 +105,8 @@
     color: var(--second-color);
 }
 
-.mail-link:hover,
-.mail-link:focus{
-    color: var(--accent-color);
-}
-
-.tel-link{
-    font-family: var(--main-font);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--second-color);
-}
-
-.tel-link:hover,
-.tel-link:focus{
+.contacts-link:hover,
+.contacts-link:focus{
     color: var(--accent-color);
 }
 /* ============================== END HEADER ==============================*/
@@ -74,31 +116,54 @@
 }
 
 /* ============================== HERO ==============================*/
+.hero{
+    text-align: center;
+    margin-bottom: 94px;
+}
 .hero-title{
+    margin-top: 200px;
+    margin-bottom: 30px;
+
     font-weight: 900;
     font-size: 44px;
     line-height: 1.36;
-    text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
 }
 
 .modal-btn{
+    display: inline-box;
+    padding: 9px 31px;
+    margin-bottom: 200px;
+
     font-family: var(--main-font);
     cursor: pointer;
     font-weight: 700;
     font-size: 16px;
-    line-height: 1.87;
-    display: flex;
-    align-items: center;
-    text-align: center;
+    line-height: 1.875;
     letter-spacing: 0.06em;
     color: #FFFFFF;
+    background-color: #2196F3;
+    border:1px solid transparent;
+    border-radius: 4px;
+}
+
+.modal-btn:hover,
+.modal-btn:focus{
     background-color: #188CE8;
 }
 /* ============================== END HERO ==============================*/
 
 /* ============================== ADVANTANGES ==============================*/
+.advantages-list{
+    display: flex;
+}
+
+.advantages-item:not(:last-child){
+    margin-right: 30px;
+
+}
+
 .advantages-item-title{
     font-weight: 700;
     font-size: 14px;
