--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -155,16 +155,24 @@ body{
 /* ============================== END HERO ==============================*/
 
 /* ============================== ADVANTANGES ==============================*/
+.advantages{    
+    margin-bottom: 94px;
+}
 .advantages-list{
     display: flex;
 }
 
+.advantages-item{
+    width:270px;
+}
 .advantages-item:not(:last-child){
     margin-right: 30px;
 
 }
 
 .advantages-item-title{
+    margin-bottom: 10px;
+
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -182,7 +190,15 @@ body{
 /* ============================== END ADVANTANGES ==============================*/
 
 /* ==============================WHAT-WE-DO ==============================*/
+.works{
+    margin-bottom: 94px;
+}
+.works-list{
+    display: flex;
+}
 .works-title{
+    margin-bottom: 50px;
+    
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -190,10 +206,22 @@ body{
     letter-spacing: 0.03em;
     color: var(--main-color);
 }
+
+.workrs-item:not(:last-child){
+    margin-right: 30px;
+}
+
 /* ==============================END WHAT-WE-DO ==============================*/
 
 /* ==============================TEAM ==============================*/
+.team{
+    padding-bottom: 94px;
+    padding-top: 94px;
+    background-color: #f1f0f0;
+}
 .team-title{
+    margin-bottom: 50px;
+
     font-weight: 700;
     font-size: 36px;
     line-height: 1.16;
@@ -202,7 +230,25 @@ body{
     color: var(--main-color);
 }
 
+.team-list{
+    display: flex;
+}
+
+.team-item{
+    border: 1px solid gray;
+    border-radius: 4px;
+}
+.team-item:not(:last-child){
+    margin-right: 30px;
+}
+
+.team-img{
+    margin-bottom: 30px;
+}
+
 .team-img-title{
+    margin-bottom: 10px;
+
     font-weight: 500;
     font-size: 16px;
     line-height: 1.18;
@@ -212,6 +258,8 @@ body{
 }
 
 .team-img-text{
+    margin-bottom: 30px;
+
     font-weight: 400;
     font-size: 16px;
     line-height: 1.18;
@@ -222,6 +270,17 @@ body{
 /* ==============================END TEAM ==============================*/
 
 /* ============================== FOOTER ============================== */
+.footer{
+    display: flex;
+    flex-direction: column;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+
+.footer > .logo-link{
+    margin-bottom: 20px;
+}
+
 .adr-item{
     font-style: normal;
 }
