--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -35,6 +35,8 @@ body{
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
+
+    font-family: var(--main-font);
 }
 
 /* ============================== END BODY ==============================*/
@@ -111,9 +113,6 @@ body{
 }
 /* ============================== END HEADER ==============================*/
 
-.body-index{
-    font-family: var(--main-font);
-}
 
 /* ============================== HERO ==============================*/
 .hero{
@@ -328,12 +327,22 @@ body{
 
 /* +++++++++++++++++++++++++++++++++++++++++++++    PORTFOLIO     +++++++++++++++++++++++++++++++++++++++++++++*/
 
-.body-portfolio{
-    font-family: 'Roboto', sans-serif;
-}
 
 /* ============================== PAGE_NAVIGATION ============================== */
+
+.portfolio-main{
+    margin-top: 94px;
+    margin-bottom: 94px;
+}
+
+.wiev{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 34px;    
+}
 .wiev-btn{
+    border-radius: 4px;
+    border:1px solid transparent;
     font-family: var(--main-font);
     font-weight: 500;
     font-size: 16px;
@@ -345,6 +354,10 @@ body{
     cursor: pointer;
 }
 
+.wiev-item:not(:last-child){
+    margin-right: 8px;
+}
+
 .wiev-btn:hover,
 .wiev-btn:focus{
     color: #FFFFFF;
@@ -353,16 +366,40 @@ body{
 /* ============================== END PAGE_NAVIGATION ============================== */
 
 /* ============================== PROJECTS ============================== */
-
 .projects-title{
     display:none;
 }
 
-.projects-list-item{
+.projects-list{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.projects-list-item{   
+    display: flex;
+    flex-direction: column; 
+
+    border: 1px solid #E5E5E5;
     background: #FFFFFF;
 }
 
+.projects-list-item:nth-child(3n+2){
+    margin-right: 30px;
+    margin-left: 30px;
+}
+
+.projects-list-item:not(:nth-last-child(-n+3)){
+    margin-bottom: 30px;
+}
+
+.projects-img{
+    margin-bottom: 20px;
+}
+
 .projects-img-title{
+    margin-left: 24px;
+    margin-bottom: 4px;
+
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -371,6 +408,9 @@ body{
 }
 
 .projects-img-text{
+    margin-left: 24px;
+    margin-bottom: 20px;
+
     font-weight: 400;
     font-size: 16px;
     line-height: 1.87;
