--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,6 +4,7 @@
     --main-color: #212121;
     --second-color: #757575;
     --accent-color: #2196F3;
+    --project-item-gap: 30px;
 }
 
 h1,h2,h3,h4,h5,h6,p{
@@ -118,13 +119,13 @@ body{
 
 /* ============================== HERO ==============================*/
 .hero{
+    background-color:#2F303A;
+}
+
+.hero-content{
     text-align: center;
-    margin-bottom: 94px;
     padding-top: 200px;
     padding-bottom: 200px;
-}
-.hero-bg{
-    background-color:#2F303A;
 }
 
 .hero-title{
@@ -161,8 +162,9 @@ body{
 /* ============================== END HERO ==============================*/
 
 /* ============================== ADVANTANGES ==============================*/
-.advantages{    
-    margin-bottom: 94px;
+.advantages-content{  
+    padding-top: 94px;  
+    padding-bottom: 94px;
 }
 .advantages-list{
     display: flex;
@@ -196,8 +198,8 @@ body{
 /* ============================== END ADVANTANGES ==============================*/
 
 /* ==============================WHAT-WE-DO ==============================*/
-.works{
-    margin-bottom: 94px;
+.works-content{
+    padding-bottom: 94px;    
 }
 .works-list{
     display: flex;
@@ -221,9 +223,12 @@ body{
 
 /* ==============================TEAM ==============================*/
 .team{
+    background-color: #f1f0f0;
+}
+.team-content{
     padding-bottom: 94px;
     padding-top: 94px;
-    background-color: #f1f0f0;
+
 }
 .team-title{
     margin-bottom: 50px;
@@ -240,16 +245,17 @@ body{
     display: flex;
 }
 
-.team-item{
-    border: 1px solid gray;
-    border-radius: 4px;
-}
 .team-item:not(:last-child){
     margin-right: 30px;
 }
 
-.team-img{
+/* .team-img{
     margin-bottom: 30px;
+} */
+
+.team-img-thumb{
+    padding-top: 30px;
+    padding-bottom: 30px;
 }
 
 .team-img-title{
@@ -264,8 +270,6 @@ body{
 }
 
 .team-img-text{
-    margin-bottom: 30px;
-
     font-weight: 400;
     font-size: 16px;
     line-height: 1.18;
@@ -277,14 +281,14 @@ body{
 
 /* ============================== FOOTER ============================== */
 .footer{
+    background-color: #2F303A;
+}
+
+.footer-content{
     display: flex;
     flex-direction: column;
     padding-top: 60px;
     padding-bottom: 60px;
-}
-
-.footer-bg{
-    background-color: #2F303A;
 }
 
 .footer > .logo-link{
@@ -294,6 +298,10 @@ body{
 
 .adr-item{
     font-style: normal;
+}
+
+.adr-item:not(:last-child){
+    margin-bottom: 9px;
 }
 
 .adr-map{
@@ -309,7 +317,7 @@ body{
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color: #fff; 
+    color: rgba(255, 255, 255, 60%); 
 }
 
 .adr-tel{
@@ -317,7 +325,7 @@ body{
     font-size: 14px;
     line-height: 1.71;
     letter-spacing: 0.03em;
-    color:#fff;
+    color: rgba(255, 255, 255, 60%); 
 }
 
 .adr-map:hover,
@@ -338,6 +346,10 @@ body{
 
 
 /* ============================== PAGE_NAVIGATION ============================== */
+.header{
+    border-bottom: 2px solid #ECECEC;
+}
+
 
 .portfolio-main{
     margin-top: 94px;
@@ -347,9 +359,13 @@ body{
 .wiev{
     display: flex;
     justify-content: center;
-    margin-bottom: 34px;    
+    margin-bottom: 50px;    
 }
 .wiev-btn{
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 22px;
+    padding-right: 22px;
     border-radius: 4px;
     border:1px solid transparent;
     font-family: var(--main-font);
@@ -382,30 +398,33 @@ body{
 .projects-list{
     display: flex;
     flex-wrap: wrap;
+    margin-top: calc(-1*var(--project-item-gap));
+    margin-left: calc(-1*var(--project-item-gap));
 }
 
 .projects-list-item{   
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
+    margin-top: var(--project-item-gap);
+    margin-left: var(--project-item-gap);
+    flex-basis: calc(100% / 3 - var(--project-item-gap));
 
-     background: #FFFFFF;
+    background: #FFFFFF;
 }
 
-.projects-list-item:nth-child(3n+2){
-    margin-right: 30px;
-    margin-left: 30px;
-}
+.projects-img-thumb{
+    /* width: 368px; */
+    padding-top: 20px;
+    padding-right: 24px;
+    padding-bottom: 20px;
+    padding-left: 24px;
 
-.projects-list-item:not(:nth-last-child(-n+3)){
-    margin-bottom: 30px;
-}
-
-.projects-img{
-    margin-bottom: 20px;
+    border-left: 1px solid rgba(238, 238, 238, 1);
+    border-right: 1px solid rgba(238, 238, 238, 1);
+    border-bottom: 1px solid rgba(238, 238, 238, 1);
 }
 
 .projects-img-title{
-    margin-left: 24px;
     margin-bottom: 4px;
 
     font-weight: 700;
@@ -416,8 +435,6 @@ body{
 }
 
 .projects-img-text{
-    margin-left: 24px;
-    margin-bottom: 20px;
 
     font-weight: 400;
     font-size: 16px;
